# pytemplate

./: README.md  pyproject.toml  requirements.txt  setup_linux.sh  setup_windows.sh
