[project]
name = "vscode-python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bandit>=1.7.10",
    "black>=24.8.0",
    "icecream>=2.1.3",
    "isort>=5.13.2",
    "jupyter>=1.1.1",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "mypy>=1.11.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "pylint>=3.3.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.66.5",
]
